	  in nano.h, so it doesn't need to be included in files that
	  include nano.h. (DLR)
	- Remove the DOS_FILE and MAC_FILE flags, as they're only used
	  in files.c, and replace them with a static file_format enum.
	  Change the openfilestruct structure accordingly in order to
	  handle this. (DLR)
	- Convert some ints with predefined boundaries to enums. (DLR)
- cut.c:
  do_cut_text()
	- Set concatenate_cut to TRUE unconditionally when doing a
	  marked cut.  This fixes an incompatibility with Pico where an
	  extra line is uncut if we do a marked cut that includes the
	  magicline and immediately follow it with an unmarked cut.
	  (DLR)
  do_uncut_text()
	- Maintain current_y's value when uncutting blocks so that
	  smooth scrolling works correctly. (DLR)
- files.c:
  read_file()
	- Rename variable fileformat to format, to avoid confusion with
	  the file_format enum type. (DLR)
  load_buffer()
	- Don't change the file format when we insert another file into
	  the current one. (DLR)
  do_insertfile()
	- Simplify by reusing variables whereever possible, and add a
	  parameter execute to indicate whether or not to be in "Execute
	  Command" mode. (DLR)
	- Rework so that goto is no longer needed, using do_writeout()
	  as a model. (DLR)
	- If file browsing succeeds, call statusq_abort() so that the
	  cursor position at the statusbar is reset. (DLR)
	- Add missing #ifdefs around the wrap_reset() call so that nano
	  compiles with wrapping disabled again. (DLR)
	- If we're not inserting a file into a new buffer, partition the
	  current buffer so that it's effectively a new buffer just
	  before inserting the file, and only restore placewewant
	  afterwards.  This is the same behavior we would get if we
	  opened the file, added all of it to the cutbuffer, closed the
	  file, and uncut at the current cursor position. (DLR)
  do_writeout()
	- Restructure if blocks for greater efficiency, using
	  do_insertfile() as a model. (DLR)